--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,3 +7,25 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+.kotak {
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+  & > p {
+    color: #333;
+    font-size: 1.2rem;
+    font-weight: bolder;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  }
+  & > p:before {
+    content: "👉";
+    margin-right: 10px;
+  }
+  & > p:after {
+    content: "👈";
+    margin-left: 10px;
+  }
+}
